crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_destruct_init.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                ArrayDestructInit(
                    (
                        false,
                        5..8,
                    ),
                    (
                        "let",
                        5..8,
                    ),
                    [
                        (
                            "a",
                            10..11,
                        ),
                        (
                            "b",
                            13..14,
                        ),
                    ],
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    19..20,
                                                ),
                                            ),
                                            19..20,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                    ],
                                ),
                                18..24,
                            ),
                        ),
                        18..24,
                    ),
                ),
                5..24,
            ),
        ),
        5..24,
    ),
]
