crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_destruct_init_and_set.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        5..8,
                    ),
                    (
                        "array_to_destruct",
                        9..26,
                    ),
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    30..31,
                                                ),
                                            ),
                                            30..31,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    33..34,
                                                ),
                                            ),
                                            33..34,
                                        ),
                                        (
                                            Int(
                                                (
                                                    3,
                                                    36..37,
                                                ),
                                            ),
                                            36..37,
                                        ),
                                    ],
                                ),
                                29..38,
                            ),
                        ),
                        29..38,
                    ),
                ),
                5..38,
            ),
        ),
        5..38,
    ),
    (
        Statement(
            (
                ArrayDestructInit(
                    (
                        false,
                        44..47,
                    ),
                    (
                        "let",
                        44..47,
                    ),
                    [
                        (
                            "a",
                            49..50,
                        ),
                        (
                            "b",
                            52..53,
                        ),
                    ],
                    (
                        Expression(
                            (
                                Var(
                                    (
                                        "array_to_destruct",
                                        57..74,
                                    ),
                                ),
                                57..74,
                            ),
                        ),
                        57..74,
                    ),
                ),
                44..74,
            ),
        ),
        44..74,
    ),
    (
        Statement(
            (
                ArrayDestructSet(
                    [
                        (
                            "a",
                            81..82,
                        ),
                        (
                            "b",
                            84..85,
                        ),
                    ],
                    (
                        Var(
                            (
                                "array_to_destruct",
                                89..106,
                            ),
                        ),
                        89..106,
                    ),
                ),
                80..106,
            ),
        ),
        80..106,
    ),
]
