crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_destruct_init_three_vars.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                ArrayDestructInit(
                    (
                        false,
                        5..8,
                    ),
                    (
                        "let",
                        5..8,
                    ),
                    [
                        (
                            "x",
                            10..11,
                        ),
                        (
                            "y",
                            13..14,
                        ),
                        (
                            "z",
                            16..17,
                        ),
                    ],
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    25..26,
                                                ),
                                            ),
                                            25..26,
                                        ),
                                        (
                                            Int(
                                                (
                                                    3,
                                                    28..29,
                                                ),
                                            ),
                                            28..29,
                                        ),
                                    ],
                                ),
                                21..30,
                            ),
                        ),
                        21..30,
                    ),
                ),
                5..30,
            ),
        ),
        5..30,
    ),
]
