crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_destruct_init_with_comments_and_trailing.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        5..8,
                    ),
                    (
                        "array_to_destruct",
                        9..26,
                    ),
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    30..31,
                                                ),
                                            ),
                                            30..31,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    33..34,
                                                ),
                                            ),
                                            33..34,
                                        ),
                                        (
                                            Int(
                                                (
                                                    3,
                                                    36..37,
                                                ),
                                            ),
                                            36..37,
                                        ),
                                    ],
                                ),
                                29..38,
                            ),
                        ),
                        29..38,
                    ),
                ),
                5..38,
            ),
        ),
        5..38,
    ),
    (
        Statement(
            (
                ArrayDestructInit(
                    (
                        false,
                        44..47,
                    ),
                    (
                        "let",
                        44..47,
                    ),
                    [
                        (
                            "a",
                            100..101,
                        ),
                        (
                            "b",
                            157..158,
                        ),
                    ],
                    (
                        Expression(
                            (
                                Var(
                                    (
                                        "array_to_destruct",
                                        214..231,
                                    ),
                                ),
                                214..231,
                            ),
                        ),
                        214..231,
                    ),
                ),
                44..231,
            ),
        ),
        44..231,
    ),
    (
        Statement(
            (
                ArrayDestructSet(
                    [
                        (
                            "a",
                            289..290,
                        ),
                        (
                            "b",
                            346..347,
                        ),
                    ],
                    (
                        Var(
                            (
                                "array_to_destruct",
                                403..420,
                            ),
                        ),
                        403..420,
                    ),
                ),
                237..420,
            ),
        ),
        237..420,
    ),
]
