crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_destruct_set.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        5..8,
                    ),
                    (
                        "a",
                        9..10,
                    ),
                    (
                        Expression(
                            (
                                Int(
                                    (
                                        0,
                                        13..14,
                                    ),
                                ),
                                13..14,
                            ),
                        ),
                        13..14,
                    ),
                ),
                5..14,
            ),
        ),
        5..14,
    ),
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        20..23,
                    ),
                    (
                        "b",
                        24..25,
                    ),
                    (
                        Expression(
                            (
                                Int(
                                    (
                                        0,
                                        28..29,
                                    ),
                                ),
                                28..29,
                            ),
                        ),
                        28..29,
                    ),
                ),
                20..29,
            ),
        ),
        20..29,
    ),
    (
        Statement(
            (
                ArrayDestructSet(
                    [
                        (
                            "a",
                            36..37,
                        ),
                        (
                            "b",
                            39..40,
                        ),
                    ],
                    (
                        Array(
                            [
                                (
                                    Int(
                                        (
                                            1,
                                            45..46,
                                        ),
                                    ),
                                    45..46,
                                ),
                                (
                                    Int(
                                        (
                                            2,
                                            48..49,
                                        ),
                                    ),
                                    48..49,
                                ),
                            ],
                        ),
                        44..50,
                    ),
                ),
                35..50,
            ),
        ),
        35..50,
    ),
]
