crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_index_set.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        5..8,
                    ),
                    (
                        "arr",
                        9..12,
                    ),
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    16..17,
                                                ),
                                            ),
                                            16..17,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    19..20,
                                                ),
                                            ),
                                            19..20,
                                        ),
                                        (
                                            Int(
                                                (
                                                    3,
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                    ],
                                ),
                                15..24,
                            ),
                        ),
                        15..24,
                    ),
                ),
                5..24,
            ),
        ),
        5..24,
    ),
    (
        Statement(
            (
                ArrayIndexSet(
                    (
                        "arr",
                        29..32,
                    ),
                    (
                        Int(
                            (
                                0,
                                33..34,
                            ),
                        ),
                        33..34,
                    ),
                    (
                        Int(
                            (
                                10,
                                38..40,
                            ),
                        ),
                        38..40,
                    ),
                ),
                29..40,
            ),
        ),
        29..40,
    ),
]
