crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__array_index_set_expression_index.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        5..8,
                    ),
                    (
                        "arr",
                        9..12,
                    ),
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    16..17,
                                                ),
                                            ),
                                            16..17,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    19..20,
                                                ),
                                            ),
                                            19..20,
                                        ),
                                        (
                                            Int(
                                                (
                                                    3,
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                    ],
                                ),
                                15..24,
                            ),
                        ),
                        15..24,
                    ),
                ),
                5..24,
            ),
        ),
        5..24,
    ),
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        29..32,
                    ),
                    (
                        "i",
                        33..34,
                    ),
                    (
                        Expression(
                            (
                                Int(
                                    (
                                        0,
                                        37..38,
                                    ),
                                ),
                                37..38,
                            ),
                        ),
                        37..38,
                    ),
                ),
                29..38,
            ),
        ),
        29..38,
    ),
    (
        Statement(
            (
                ArrayIndexSet(
                    (
                        "arr",
                        43..46,
                    ),
                    (
                        Add(
                            (
                                Var(
                                    (
                                        "i",
                                        47..48,
                                    ),
                                ),
                                47..48,
                            ),
                            (
                                Int(
                                    (
                                        1,
                                        51..52,
                                    ),
                                ),
                                51..52,
                            ),
                        ),
                        47..52,
                    ),
                    (
                        Int(
                            (
                                42,
                                56..58,
                            ),
                        ),
                        56..58,
                    ),
                ),
                43..58,
            ),
        ),
        43..58,
    ),
]
