crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__block_singleline.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Main(
            (
                "main",
                5..9,
            ),
            None,
            (
                Block(
                    [],
                    [
                        (
                            Expression(
                                (
                                    FunctionInvocation(
                                        [],
                                        (
                                            "echo",
                                            16..20,
                                        ),
                                        [
                                            (
                                                Int(
                                                    (
                                                        4,
                                                        21..22,
                                                    ),
                                                ),
                                                21..22,
                                            ),
                                        ],
                                        [],
                                    ),
                                    16..23,
                                ),
                            ),
                            16..23,
                        ),
                    ],
                ),
                10..29,
            ),
        ),
        5..29,
    ),
    (
        Main(
            (
                "main",
                35..39,
            ),
            Some(
                (
                    "args",
                    39..45,
                ),
            ),
            (
                Singleline(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "echo",
                                        47..51,
                                    ),
                                    [
                                        (
                                            Var(
                                                (
                                                    "args",
                                                    52..56,
                                                ),
                                            ),
                                            52..56,
                                        ),
                                    ],
                                    [],
                                ),
                                47..57,
                            ),
                        ),
                        47..57,
                    ),
                ),
                45..57,
            ),
        ),
        35..57,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    63..64,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    64..65,
                                ),
                            ],
                            [
                                (
                                    Failure(
                                        (
                                            Handle(
                                                (
                                                    "failed",
                                                    66..72,
                                                ),
                                                None,
                                                (
                                                    Block(
                                                        [],
                                                        [
                                                            (
                                                                Expression(
                                                                    (
                                                                        FunctionInvocation(
                                                                            [],
                                                                            (
                                                                                "echo",
                                                                                83..87,
                                                                            ),
                                                                            [
                                                                                (
                                                                                    Text(
                                                                                        [
                                                                                            (
                                                                                                Text(
                                                                                                    (
                                                                                                        "failed",
                                                                                                        89..95,
                                                                                                    ),
                                                                                                ),
                                                                                                89..95,
                                                                                            ),
                                                                                        ],
                                                                                    ),
                                                                                    88..96,
                                                                                ),
                                                                            ],
                                                                            [],
                                                                        ),
                                                                        83..97,
                                                                    ),
                                                                ),
                                                                83..97,
                                                            ),
                                                        ],
                                                    ),
                                                    73..103,
                                                ),
                                            ),
                                            66..103,
                                        ),
                                    ),
                                    66..103,
                                ),
                            ],
                        ),
                        63..103,
                    ),
                ),
                63..103,
            ),
        ),
        63..103,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    108..109,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    109..110,
                                ),
                            ],
                            [
                                (
                                    Failure(
                                        (
                                            Handle(
                                                (
                                                    "failed",
                                                    111..117,
                                                ),
                                                None,
                                                (
                                                    Singleline(
                                                        (
                                                            Expression(
                                                                (
                                                                    FunctionInvocation(
                                                                        [],
                                                                        (
                                                                            "echo",
                                                                            119..123,
                                                                        ),
                                                                        [
                                                                            (
                                                                                Text(
                                                                                    [
                                                                                        (
                                                                                            Text(
                                                                                                (
                                                                                                    "failed",
                                                                                                    125..131,
                                                                                                ),
                                                                                            ),
                                                                                            125..131,
                                                                                        ),
                                                                                    ],
                                                                                ),
                                                                                124..132,
                                                                            ),
                                                                        ],
                                                                        [],
                                                                    ),
                                                                    119..133,
                                                                ),
                                                            ),
                                                            119..133,
                                                        ),
                                                    ),
                                                    117..133,
                                                ),
                                            ),
                                            111..133,
                                        ),
                                    ),
                                    111..133,
                                ),
                            ],
                        ),
                        108..133,
                    ),
                ),
                108..133,
            ),
        ),
        108..133,
    ),
]
