crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__command_backslash.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(r#\"$test\\n$\"#)"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "test",
        ),
        1..5,
    ),
    (
        Token(
            "\\n",
        ),
        5..7,
    ),
    (
        Token(
            "$",
        ),
        7..8,
    ),
]
